--- a/themes/wp-rig-lazar/.stylelintrc.json
+++ b/themes/wp-rig-lazar/.stylelintrc.json
@@ -1,8 +1,12 @@
 {
   "extends": [
-  "stylelint-config-wordpress"
+    "@wordpress/stylelint-config"
   ],
   "rules": {
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "selector-class-pattern": null,
+    "at-rule-empty-line-before": null,
+    "rule-empty-line-before": null
+
   }
 }
