--- a/themes/wp-rig-lazar/package.json
+++ b/themes/wp-rig-lazar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wprig",
-  "version": "2.0.1",
+  "version": "2.3.3",
   "description": "A progressive theme development rig for WordPress.",
   "author": "The WP Rig Contributors",
   "license": "GPL-3.0-or-later",
@@ -10,30 +10,38 @@
     "type": "git",
     "url": "git+https://github.com/wprig/wprig.git"
   },
+  "engines": {
+    "node": ">=20.13.1",
+    "npm": ">=10.5.2"
+  },
   "bugs": {
     "url": "https://github.com/wprig/wprig/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/register": "^7.10.5",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/register": "^7.4.4",
+    "@justinribeiro/lite-youtube": "^1.5.0",
     "@wordpress/eslint-plugin": "^2.3.0",
+    "@wordpress/stylelint-config": "^22.6.0",
     "ajv": "^6.12.3",
     "ansi-colors": "^4.1.1",
-    "autoprefixer": "^9.8.5",
+    "autoprefixer": "^9.6.1",
     "babel-jest": "^24.8.0",
-    "browser-sync": "^2.26.10",
+    "browser-sync": "^2.27.10",
     "create-cert": "^1.0.6",
     "cross-env": "^5.2.0",
     "cssnano": "^4.1.10",
     "deepmerge": "^4.0.0",
     "del": "^5.0.0",
-    "eslint": "^6.0.1",
+    "eslint": "^6.8.0",
     "eslint-config-gulp": "^3.0.1",
     "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-standard": "^4.0.0",
     "esm": "^3.2.25",
     "esvalidate": "^0.1.3",
@@ -46,10 +54,10 @@
     "gulp-imagemin": "^6.0.0",
     "gulp-load-plugins": "^2.0.0",
     "gulp-newer": "^1.4.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-phpcs": "^3.0.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-phpcs": "^3.1.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^10.0.0",
     "gulp-potomo": "^1.1.0",
     "gulp-print": "^5.0.2",
     "gulp-rename": "^1.4.0",
@@ -57,29 +65,32 @@
     "gulp-string-replace": "^1.1.2",
     "gulp-tabify": "0.0.2",
     "gulp-uglify": "^3.0.2",
-    "gulp-wp-pot": "^2.4.3",
-    "gulp-zip": "^5.0.2",
+    "gulp-wp-pot": "^2.3.5",
+    "gulp-zip": "^5.0.0",
     "import-fresh": "^3.1.0",
-    "jest": "^24.8.0",
+    "jest": "^29.1.2",
     "jest-expect-message": "^1.0.2",
     "map-stream": "0.0.7",
     "mississippi": "^4.0.0",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.44",
     "postcss-calc": "^7.0.1",
-    "postcss-import": "^12.0.1",
-    "postcss-partial-import": "^4.1.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-import": "^14.0.0",
+    "postcss-nested": "^6.2.0",
+    "postcss-nesting": "^13.0.0",
+    "postcss-preset-env": "^10.0.2",
     "postcss-reporter": "^6.0.1",
+    "postcss-simple-vars": "^7.0.1",
     "pump": "^3.0.0",
     "rimraf": "^2.6.3",
-    "stylelint": "^10.0.1",
-    "stylelint-config-wordpress": "^14.0.0",
+    "stylelint": "^14",
     "vinyl": "^2.2.0"
   },
   "babel": {
     "presets": [
-      "@babel/env"
+      "@babel/preset-react",
+      "@babel/preset-env"
     ]
   },
   "eslintConfig": {
@@ -100,12 +111,6 @@
       "jest-expect-message"
     ]
   },
-  "stylelint": {
-    "extends": "stylelint-config-wordpress",
-    "rules": {
-      "no-descending-specificity": null
-    }
-  },
   "scripts": {
     "build": "gulp buildDev",
     "bundle": "cross-env NODE_ENV=production gulp bundleTheme",
@@ -122,6 +127,7 @@
     "test:gulp": "run-s test:gulp:dev test:gulp:prod",
     "lint": "eslint assets/js/src/",
     "lint:gulp": "eslint gulp/",
-    "lint:gulp:fix": "eslint --fix gulp/"
+    "lint:gulp:fix": "eslint --fix gulp/",
+    "editor-support": "node gulp/editorSupport.js"
   }
 }
