--- a/.deployignore
+++ b/.deployignore
@@ -1,9 +1,4 @@
-# Ignore everything
-*
-# Don't ignore these directories
-!wp-content/
-!wp-content/plugins/
-!wp-content/plugins/**
-
-# Optional: If you want to be more selective about which plugins to include
-# !wp-content/plugins/specific-plugin-name/
+node_modules
+node_modules/**
+themes/wp-rig
+themes/wp-rig/**
