--- a/themes/wp-rig/assets/fonts/config.json
+++ b/themes/wp-rig/assets/fonts/config.json
@@ -223,6 +223,46 @@
       "src": "fontawesome"
     },
     {
+      "uid": "d462d35d5a28eddf11c2ede744e72d63",
+      "css": "bluesky-brands-solid",
+      "code": 59411,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M796.5 575.6C790 574.8 783.4 574 777 573 783.6 573.8 790 574.8 796.5 575.6ZM562.5 443.6C511.5 344.5 372.9 160 243.9 68.9 120.3-18.4 73.2-3.3 42.2 10.7 6.4 27 0 81.8 0 114.1S17.8 378.9 29.3 417.8C67.4 546.1 203.3 589.5 328.5 575.4 335 574.4 341.4 573.6 348 572.7 341.6 573.6 335.2 574.6 328.5 575.4 145.1 602.7-17.8 669.5 195.9 907.2 430.9 1150.6 517.8 855.1 562.5 705.3 607.2 855.1 658.6 1139.8 925 907.2 1125 705.3 979.9 602.5 796.5 575.4 790 574.6 783.4 573.8 777 572.9 783.6 573.6 790 574.6 796.5 575.4 921.7 589.3 1057.4 545.9 1095.7 417.8 1107.2 378.9 1125 146.5 1125 114.1S1118.6 26.8 1082.8 10.7C1052-3.1 1004.7-18.4 881.3 68.9 752.1 160 613.5 344.5 562.5 443.6Z",
+        "width": 1125
+      },
+      "search": [
+        "bluesky-brands-solid"
+      ]
+    },
+    {
+      "uid": "5373a6646bb7c1636402ca49adf9cf28",
+      "css": "x-twitter-brands-solid",
+      "code": 59412,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M697.7 93.8L835.5 93.8 534.4 437.9 888.7 906.3 611.3 906.3 393.9 622.3 145.5 906.3 7.4 906.3 329.5 538.1-10.2 93.8 274.2 93.8 470.5 353.3 697.7 93.8ZM649.2 823.8L725.6 823.8 232.6 171.9 150.6 171.9 649.2 823.8Z",
+        "width": 875
+      },
+      "search": [
+        "x-twitter-brands-solid"
+      ]
+    },
+    {
+      "uid": "37910a1398001a5ccb541cb2a253a2c7",
+      "css": "right-open-1",
+      "code": 61446,
+      "src": "mfglabs"
+    },
+    {
+      "uid": "b714be5a812a474811604f700dfc87ce",
+      "css": "left-open-1",
+      "code": 61447,
+      "src": "mfglabs"
+    },
+    {
       "uid": "1164cd47d533dccebdaa7de6801e04f3",
       "css": "locator",
       "code": 59392,
